--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -11,13 +11,13 @@ footer {
 .platforms {
     display: flex;
     flex-direction: row;
+    gap: 1rem;
+    align-items: center;
     justify-content: center;
     padding-top: 2rem;
 }
 
 .platform {
-    margin-left: 1rem;
-    margin-right: 1rem;
     text-decoration: none;
     color: white;
 }
