--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -2,37 +2,38 @@
 html{scroll-behavior:smooth}
 
 nav {
+    position: sticky;
+    top: 0;
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
-    position: sticky;
-    top: 0;
+    font-weight: bold;
+    padding: 1rem;
     background-color: #343a49;
     border: 1px solid black;
-    padding: 1rem;
-    font-weight: bold;
 }
 
 .name {
     font-size: 200%;
-}
-
-.divider {
-    color: lightgrey;
+    padding-right: 2%;
 }
 
 .links {
     display: flex;
+    justify-content: space-evenly;
     flex-direction: row;
     flex-wrap: wrap;
+    font-size: 80%;
+    border-left: 1px solid grey;
 }
 
 .link, .divider {
     font-size: 150%;
-    margin-right: 0.75rem;
-    margin-left: 0.75rem;
     text-decoration: none;
     color: grey;
+    margin-left: 2%;
+    margin-right: 2%;
 }
 
 .link:hover {
@@ -40,14 +41,15 @@ nav {
 }
 
 .contact-me {
-    position: absolute;
-    right: 1rem;
+    /* position: absolute; */
+    /* right: 1rem; */
     background-color: #6741d9;
     cursor: pointer;
     padding: 1rem;
     font-weight: bold;
     border: 1px solid white;
     text-decoration: none;
+    text-align: center;
     border-radius: 0.5rem;
 }
 
