--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -4,16 +4,17 @@
     margin-top: 20rem;
     margin-left: 5%;
     margin-right: 5%;
+    
 }
 .container-projects {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    /* justify-content: center; */
-    /* background-color: #343a49; */
+    justify-content: center;
     padding-top: 5rem;
     padding-bottom: 5rem;
-    margin-left: 2rem;
+    /* border: 1px solid black; */
+    /* background-color: #343a49; */
 }
 
 
@@ -24,8 +25,8 @@
 }
 
 .title-description {
-    margin-right: 15rem;
-    margin-left: 15rem;
+    margin-left: 20%;
+    margin-right: 20%;
 }
 
 .project-card {
@@ -54,9 +55,9 @@
 
 .project-img {
     border: 2px solid grey;
-    height: 25rem;
-    width: 28rem;
-    margin-bottom: 1.5rem;
+    height: 100%;
+    width: 100%;
+    
 }
 
 .view-more {
