--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -7,33 +7,32 @@ nav {
     width: 100%;
     display: flex;
     flex-direction: row;
-    align-items: center;
     font-weight: bold;
     padding: 1rem;
     background-color: #343a49;
     border: 1px solid black;
+    padding-right: 20%;
 }
 
 .name {
-    font-size: 200%;
-    padding-right: 2%;
+    font-size: 140%;
+    padding: 1%;
 }
 
 .links {
     display: flex;
-    justify-content: space-evenly;
     flex-direction: row;
-    flex-wrap: wrap;
-    font-size: 80%;
+    align-items: center;
+    font-size: 125%;
+    gap: 3%;
     border-left: 1px solid grey;
+    /* border: 1px solid black; */
 }
 
-.link, .divider {
-    font-size: 150%;
+.link {
     text-decoration: none;
     color: grey;
-    margin-left: 2%;
-    margin-right: 2%;
+    font-size: 80%;
 }
 
 .link:hover {
@@ -41,13 +40,11 @@ nav {
 }
 
 .contact-me {
-    /* position: absolute; */
-    /* right: 1rem; */
     background-color: #6741d9;
-    cursor: pointer;
-    padding: 1rem;
-    font-weight: bold;
     border: 1px solid white;
+    cursor: pointer;
+    padding: 2%;
+    font-weight: bold;
     text-decoration: none;
     text-align: center;
     border-radius: 0.5rem;
