--- a/src/styles/Skills&Technologies.css
+++ b/src/styles/Skills&Technologies.css
@@ -22,25 +22,23 @@
 }
 
 .container-skills {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    display: grid;
+    gap: 5%;
+    grid-template-columns: 50% 50%;
     margin-top: 5rem;
-    padding-bottom: 5rem;
+    margin-right: 5%;
 }
 
 .skill-card {
     display: flex;
     flex-direction: row;
-    width: 35%;
     color: white;
     font-weight: bold;
-    font-size: 1.5rem;
     background-color: #1e201e;
     padding: 1.5rem;
     border: 1px solid black;
-    margin: 1.5rem;
     margin-bottom: 0.5rem;
+    text-align: center;
 }
 
 .skill-card-icon {
