css styling refactor && contact info flex-direction column

--- a/src/styles/Intro.css
+++ b/src/styles/Intro.css
@@ -14,10 +14,12 @@
     color: #6741d9;
 }
 
+/*
 h3 {
     font-size: 75%;
     color: grey;
 }
+
 
 .image {
     border: 1px solid black;
@@ -25,3 +27,4 @@ h3 {
     height: 30rem;
     border-radius: 3rem;
 }
+*/
