--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,3 +3,16 @@
   margin: 0;
   padding: 0;
 }
+
+.title {
+  text-align:center;
+  font-size: 125%;
+  color: white;
+}
+
+.title-description {
+  font-size: 100%;
+  margin-left: 20%;
+  margin-right: 20%;
+  color: darkgray;
+}
