--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -3,12 +3,14 @@ footer {
     border: 1px solid black;
     padding: 1rem;
     margin-top: 15rem;
+    width: 100%;
 }
 
 .platforms {
     display: flex;
-    gap: 2%;
-    justify-content: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
     padding-top: 2rem;
 }
 
